--- a/paint/css/style.css
+++ b/paint/css/style.css
@@ -12,7 +12,7 @@
     width: 100%;
     min-height: calc(100vh - 100px);
     max-height: calc(100vh - 100px);
-    border: solid #000 1px;
+    transition: all .2s ease;
 }
 .menu_bar{
     height: 100px;
@@ -20,6 +20,11 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    border-bottom: solid #000 1px;
+    position: relative;
+    z-index: 10;
+
+    transform-origin: bo;
 }
 .size{
     width: 80px;
@@ -75,11 +80,60 @@
 .tools_block{
     width: 100%;
     height: 65px;
-    display: table-row-group;
+    display: flex;
+    flex-wrap: wrap;
 }
 .tool{
     height: 25px;
     line-height: 25px;
     width: 25px;
     margin: 5px;
+    border-radius: 5px;
+    border: solid #d1d1d1 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all .1s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
+.tool:hover{
+    filter: brightness(.9);
+}
+.tool img{
+    height: 20px;
+    width: 20px;
+}
+.buttons_un_re{
+    width: 100px;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.button_block{
+    width: 100%;
+    height: 65px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-around;
+}
+.undo_redo{
+    height: 35px;
+    line-height: 35px;
+    width: 35px;
+    margin: 5px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: solid #d1d1d1 3px;
+    transition: all .1s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+.undo_redo:hover{
+    filter: brightness(.9);
+}
+.undo_redo img{
+    height: 25px;
+    width: 25px;
+}
+.loupe { background-color:#555; background:rgba(0, 0, 0, 0.25); border:5px solid rgba(0, 0, 0, 0); cursor:url(blank.png), url(blank.cur), none; }
